fixing java dependencies